--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
 		<div class="collapse navbar-collapse" id="navbar">
       <% unless signed_in?  %>
         <ul class=" navbar-nav pull-right">
-          <li><%= link_to image_tag('steam_01', class: "steam_log_in"), '/auth/steam' %></li>
+          <ul><%= link_to image_tag('steam_01', class: "steam_log_in"), '/auth/steam' %></ul>
         </ul>
       <% end %>
 			<ul class="nav navbar-nav navbar-right">
