added steam profile link to profile

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -156,3 +156,16 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
+
+#user-profile {
+  padding: 20px;
+}
+
+.profile-nickname{
+  font-size: 24px;
+  font-weight: 800px;
+}
+
+.profile-icon {
+  padding-left: 20px;
+}
