--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,6 +65,10 @@
   </div>
 
 </div>
+
+<% if @private == true %>
+  <div>Profile Private</div>
+<% else %>
   <div id="col-lg-6">
     <ul class="nav nav-pills">
       <li class="active"><a data-toggle="pill" href="#overall">Overall</a></li>
@@ -174,6 +178,8 @@
       </div>
     </div>
   </div>
+<% end %>
+
 
 <script>
    $(document).ready(function() {
