add class name to edit comment link

--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function() {
 	$('#new_comment').on('ajax:success', function() {
-		$(this).remove();
+		// $(this).remove();
 	
 	})
 });
