--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
 			<%= simple_format(comment.reply_article) %>
 		</div>
 		<% if comment.user_id == current_user.id %>
-			<%= link_to 'Edit Comment', edit_article_comment_path(comment.article_id, comment) %>
+			<%= link_to 'Edit Comment', edit_article_comment_path(comment.article_id, comment), class: 'edit_comment_link' %>
 			<%= link_to 'Delete Comment', article_comment_path(comment.article_id, comment), method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
 		<% end %>
 	</div>
