--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,13 +15,12 @@
             <%= link_to "http://steamcommunity.com/profiles/#{@user.uid.to_i + 76561197960265728}" do %>
             <i class="fa fa-steam-square fa-2x profile-icon" aria-hidden="true"></i>
             <% end %>
-            <i class="fa fa-facebook fa-2x profile-icon" aria-hidden="true"></i>
             </div>
             <br>
         
-          <p>Name: <%= @user.name%></p><br>
+          <p>NAME: <%= @user.name%></p>
           
-          <p>Email: <%= @user.email %></p>
+          <p>EMAIL: <%= @user.email %></p>
           <!-- Follow button-->
           <% if User.check_follower(params[:id], @user.id) && params[:id].to_i != current_user.id %>
             <%= form_for :follower, url: followers_path, method: :post, :html => {:class => "inline"} do |f| %>
@@ -76,7 +75,7 @@
 </div>
   <div id="col-lg-6">
     <ul class="nav nav-pills">
-      <li class="active"><a data-toggle="pill" href="#overall">Overall</a></li>
+      <li class="active active-pill"><a data-toggle="pill" href="#overall">Overall</a></li>
       <li><a data-toggle="pill" href="#stats">Stats</a></li>
       <li><a data-toggle="pill" href="#history">History</a></li>
 
@@ -99,31 +98,26 @@
     <div class="tab-content">
       <!-- Overall  -->
       <div id="overall" class="tab-pane fade in active background-color-div">
-        <h3 class="h3-pill">Overall</h3>
           <%= render partial: 'users/overall'%>
       </div>
 
       <!-- Stats -->
       <div id="stats" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">Stats</h3>
         <p>Stat content</p>
       </div>
       
       <!-- History -->
       <div id="history" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">History</h3>
         <p>history content</p>
       </div>
 
       <!-- Settings -->
       <div id="settings" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">Settings</h3>
         <%= render partial: 'users/form' %>
       </div>
 
       <!-- About Me -->
       <div id="about_me" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">About me</h3>
         <% if @user.about %>
           <%= simple_format(@user.about) %>
         <% else %>
@@ -133,7 +127,6 @@
 
       <!-- My Games -->
       <div id="my_games" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">My Games</h3>
         <ul>game1</ul>
         <ul>game2</ul>
         <ul>game3</ul>
@@ -142,7 +135,6 @@
   
       <!-- Achievements -->
       <div id="my_achievements" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">Achievements</h3>
         <div class="text-left">
           <% achievements = @user.achievements.order(status: :desc) %>
           <div class="achievements-wrapper">
@@ -166,7 +158,6 @@
 
       <!-- Commendations -->
       <div id="my_commendations" class="tab-pane fade background-color-div">
-        <h3 class="h3-pill">Commendations</h3>
         <% @commendations.each_with_index do |commendation, index| %>
           <div>
             <%= commendation.image %>
