--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -41,6 +41,13 @@
 	  </div>
 	</div>
 
+	<div class="form-group">
+	  <%= form.label :about, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <%= form.text_area :about, class: 'form-control' %>
+	  </div>
+	</div>
+
   <div class="submit-field form-group">
   	<div class="col-sm-offset-2 col-sm-3">
       <%= form.submit 'Update User', class: 'btn btn-default' %>
