--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -182,3 +182,12 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 .nav-pills {
   font-size: 20px;
 } 
+
+.private-div {
+  height: 400px;
+}
+
+.private-text {
+  color: red;
+  padding: 50px;
+}
