--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -186,3 +186,12 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 .about_area {
   width: 90%;
 }
+
+.private-div {
+  height: 400px;
+}
+
+.private-text {
+  color: red;
+  padding: 50px;
+}
