--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 	
 </header>
 
-<div class="container-quote">
+<div class="container-quote ">
 	<blockquote class="blockquote">
 		<p><%= @quote["quoteText"] %></p>
 		<% quote_author = @quote["quoteAuthor"] %>
@@ -15,7 +15,7 @@
 
 	
 	<div class="row ">
-		<div class="col-lg-8 background-color-div ">
+		<div class="col-lg-8 profile-background ">
 			
 			<div class="row">
 				<div class="col-lg-9 "><h3 class="h3-title">Articles</h3></div>
@@ -75,7 +75,7 @@
 	
 		<!-- Activity feed -->
 		<% if signed_in? %>
-			<div class="col-sm-4">
+			<div class="col-sm-4 profile-background">
 				<h3 class="h3-title">Activity Feed</h3>
 				<div class="activity-feed">
 					<% @activities_home.each do |activity| %>
@@ -96,7 +96,7 @@
 			<div class="col-sm-6">
 				<div class="row">
 
-					<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
+					<div class="col-sm-9 "><h3 class="h3-title ">Top 5 Gamers (by today playtime)</h3></div>
 					<div class="col-sm-3">
 						<%= link_to users_path, class: 'btn btn-default align-bottom' do %>
 							View all users
