--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <div id="header" class="border border background-color-div">
-  <div class ="row">
+  <div class ="row profile-background">
     <div class="col-lg-6">
        <div class="row" id="user-profile">
         <div class="col-sm-3">
