--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -203,3 +203,18 @@ background: -webkit-linear-gradient(top, rgba(226,226,226,1) 0%,rgba(209,209,209
 background: linear-gradient(to bottom, rgba(226,226,226,1) 0%,rgba(209,209,209,1) 40%,rgba(209,209,209,1) 40%,rgba(219,219,219,1) 50%,rgba(254,254,254,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
 }
+
+.level {
+  position: relative;
+
+  width: 30px;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 25px;
+  left: 33px;
+background: rgb(180,223,91); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(180,223,91,1) 0%, rgba(180,223,91,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4df5b', endColorstr='#b4df5b',GradientType=0 ); /* IE6-9 */
+}
