--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
 
-<div id="header" class="border border background-color-div">
-  <div class ="row profile-background">
+<div id="header" class="border border profile-background">
+  <div class ="row ">
     <div class="col-lg-6">
        <div class="row" id="user-profile">
         <div class="col-sm-3">
           <div class="circleborder">
           <%= image_tag @user.avatar_url, size:"124", class:"steam-avatar"%>
+        </div>
+        <div class="col-sm-6">
+        <p class=" level">25</p>
         </div>
         </div>
 
@@ -46,7 +49,7 @@
       <div class="row" id="skill-bar">
         <!-- Skill Bars -->
         <div class="container-fluid">
-          <div class="progress skill-bar ">
+          <!-- <div class="progress skill-bar ">
             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">Playtime today <i class="val">100%</i></span>
               </div>
@@ -62,7 +65,7 @@
             <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">Playtime this month<i class="val">75%</i></span>
             </div>
-          </div>
+          </div> -->
 
           <div class="progress skill-bar">
             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
@@ -73,6 +76,7 @@
         <!-- Skill Bars end -->
       </div>
     </div>
+
   </div>
 
 </div>
