--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -271,7 +271,7 @@ table {
 
 .home-user-table {
   width: 100%;
-  background-color: whitesmoke;
+  background-color: #D4D6C8;
   th, td {
     border: 0px solid black;
     padding: 4px;
@@ -301,7 +301,7 @@ table {
     
 
 tr:nth-child(odd) {
-    background: #d7dce2;
+    background: #9A9B94;
 }
 
 .steam_log_in {
@@ -359,7 +359,7 @@ tr:nth-child(odd) {
 }
 
 #navbar-main {
-    background-color: #333332;
+    background-color: #52524E;
 }
 
 .nav-text {
