--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -28,7 +28,7 @@
 $background-dark: #403F48;
 
 .background-color-div {
-  background-color: whitesmoke;
+  background-color: #9A9B94;
 }
 
 .border {
@@ -179,6 +179,10 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   color: black;
 }
 
+.active {
+  color: black;
+}
+
 .nav-pills {
   font-size: 20px;
 } 
@@ -197,24 +201,23 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 
 .profile-background {
- background: rgb(226,226,226); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(226,226,226,1) 0%, rgba(209,209,209,1) 40%, rgba(209,209,209,1) 40%, rgba(219,219,219,1) 50%, rgba(254,254,254,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(226,226,226,1) 0%,rgba(209,209,209,1) 40%,rgba(209,209,209,1) 40%,rgba(219,219,219,1) 50%,rgba(254,254,254,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(226,226,226,1) 0%,rgba(209,209,209,1) 40%,rgba(209,209,209,1) 40%,rgba(219,219,219,1) 50%,rgba(254,254,254,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
+ background-color: #9A9B94;
 }
 
 .level {
   position: relative;
 
-  width: 30px;
-  border-style: solid;
-  border-width: 1px;
+  width: 33px;
+  border-style: ridge;
+  border-width: 2px;
+  border-color: #448998;
   font-size: 25px;
+  color: white;
   left: 33px;
-background: rgb(180,223,91); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(180,223,91,1) 0%, rgba(180,223,91,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4df5b', endColorstr='#b4df5b',GradientType=0 ); /* IE6-9 */
+background: rgb(109,179,242); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(109,179,242,1) 0%, rgba(84,163,238,1) 50%, rgba(54,144,240,1) 51%, rgba(30,105,222,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(109,179,242,1) 0%,rgba(84,163,238,1) 50%,rgba(54,144,240,1) 51%,rgba(30,105,222,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(109,179,242,1) 0%,rgba(84,163,238,1) 50%,rgba(54,144,240,1) 51%,rgba(30,105,222,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6db3f2', endColorstr='#1e69de',GradientType=0 ); /* IE6-9 */
 }
+
