--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,7 +75,7 @@
 	
 		<!-- Activity feed -->
 		<% if signed_in? %>
-			<div class="col-sm-4 profile-background">
+			<div class="col-sm-4">
 				<h3 class="h3-title">Activity Feed</h3>
 				<div class="activity-feed">
 					<% @activities_home.each do |activity| %>
@@ -96,7 +96,7 @@
 			<div class="col-sm-6">
 				<div class="row">
 
-					<div class="col-sm-9 "><h3 class="h3-title ">Top 5 Gamers (by today playtime)</h3></div>
+					<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
 					<div class="col-sm-3">
 						<%= link_to users_path, class: 'btn btn-default align-bottom' do %>
 							View all users
