--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -97,7 +97,7 @@ $background-dark: #403F48;
 }
 
 .achieved {
-  color: #39FF14;
+  opacity: 1.0 !important;
 }
 
 .achievements-wrapper {
@@ -109,6 +109,7 @@ $background-dark: #403F48;
     overflow: hidden;
     border: 1px solid #000;
     border-radius: 5px;
+    opacity: 0.3;
     .achievement-title {
       margin-left: 15px;
       font-size: 1.2em;
