--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -1,11 +1,9 @@
 $(document).ready(function() {
-	$('.comment-wrapper-parent').on('ajax:success', function() {
-		console.log(this);
+	$('.comment-wrapper-parent:not(.registered').on('ajax:success', function() {
 		var commentSplit = this.id.split('-');
-		var $target = $("#edit_comment_link<%= commentSplit[1].to_i %>")
-		console.log($target);
+		var $target = $("#edit_comment_link" + commentSplit[1])
 		$target.hide();
 		$(this).after('<%= j render("form") %>')
-	})
+	}).addClass('registered');
 });
 
