--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -219,7 +219,7 @@
 .footer {
       position: absolute;
       overflow: hidden;
-      background-color: #272121;
+      background-color: #430F58;
       width: 100%;
       height: 260px;
     }
@@ -359,7 +359,7 @@ tr:nth-child(odd) {
 }
 
 #navbar-main {
-    background-color: #52524E;
+    background-color: #430F58;
 }
 
 .nav-text {
