teal color scheme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ $white-font: #FFF;
 $background-dark: #363333;
 body{
 	color: black;
-	background-color: #E9E9E5;
+	background-color: #ECECEC;
 	font-weight: 300;
 	.main-container{
 		font-family: 'Ubuntu', sans-serif !important;
