--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -28,7 +28,7 @@
 $background-dark: #403F48;
 
 .background-color-div {
-  background-color: #9A9B94;
+  background-color: #F5F5F5;
 }
 
 .border {
@@ -202,7 +202,7 @@ box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 
 .profile-background {
- background-color: #9A9B94;
+ background-color: #F5F5F5;
 }
 
 .level {
