--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -35,7 +35,8 @@
 
 		    <%= link_to 'Reply This Article', new_article_comment_path(article) %>
 	    <% end %>
-			<%= link_to message, new_article_comment_path(article), id: "new_comment_link", remote:true %>
+	    <%= link_to message, article_path(article) %>
+			<%#= link_to message, new_article_comment_path(article), id: "new_comment_link", remote:true %>
 		<% else %>
 				<%= link_to message, '/auth/steam' %>
 		<% end %>
