--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -29,6 +29,14 @@ function create_notification(remain_time){
   });
 };
 
+function sound(){
+  $("<audio></audio>").attr({
+    'src': '<%= image_url('coins.mp3') %>',
+    'volume':0.5,
+    'autoplay':'autoplay'
+  }).appendTo("body");
+}
+
 function my_function(){
   $.ajax({
     url: "/user/create_user_notifications",
@@ -37,6 +45,7 @@ function my_function(){
     success: function(data) {
       console.log(data);
       if (data <= 5){
+        sound();
         new PNotify({
          title: 'Desktop Notification',
          text: "It's time to stop game if you want to reach the desired time.",
@@ -46,16 +55,22 @@ function my_function(){
          }
         });
       } else if(data <= 10) {
+        sound();
         create_notification(10);
       } else if(data <= 20) {
+        sound();
         create_notification(20);
       } else if(data <= 30) {
+        sound();
         create_notification(30);
       } else if(data <= 40) {
+        sound();
         create_notification(40);
       } else if(data <= 50) {
+        sound();
         create_notification(50);
       } else if(data <= 60) {
+        sound();
         create_notification(60);
       }
     }
