--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -9,7 +9,7 @@
 // articles#index
 .article-wrapper {
 	border: 1px solid #efefef;
-	background-color: #ddd;
+	background-color: #F5F5F5;
 	border-radius: 4px;
 	margin-bottom: 18px;
 	padding: 16px 18px 16px 18px;
