--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,6 +1,6 @@
 .search-wrapper {
 	border: 1px solid #efefef;
-	background-color: #ddd;
+	background-color: #F5F5F5;
 	border-radius: 4px;
 	margin-bottom: 18px;
 	padding: 16px 18px 16px 18px;
