--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -117,7 +117,7 @@
       
       <!-- History -->
       <div id="history" class="tab-pane fade background-color-div">
-        <p>history content</p>
+        <h4>Last 2 weeks </h4>
         <% if @recent_games.nil? %>
           <%= "" %>
         <% else %>
