--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
             <!-- FIXME - change message from "Please fill out this field." -->
             <%= text_field_tag :search, params[:search], placeholder: 'Search for players or articles', required: true, class: 'form-control' %>
             <!-- FIXME - Change Go! to search icon -->
-            <span class="input-group-btn"><%= image_submit_tag("search", class: 'btn btn-default search') %></span>
+            <span class="input-group-btn"><%= image_submit_tag("search.png", class: 'btn btn-default search') %></span>
           </div>
         <% end %>
       </div>
