--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
       <% unless signed_in?  %>
         <ul class="navbar-nav pull-right   navbar-signin">
    
-          <ul> <%= image_tag 'steam-icon-large.png', class: "steam_log_in"%><%= link_to "Sign in with steam", '/auth/steam', class: "navbar-title nav-text" %></ul>
+          <ul> <%= image_tag('steam-icon-large.png', class: "steam_log_in")%><%= link_to "Sign in with steam", '/auth/steam', class: "navbar-title nav-text" %></ul>
         </ul>
       <% end %>
 			<ul class="nav navbar-nav navbar-right">
