--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 			</div>
 			
 			<div class="row">			
-				<div class="col-lg-9">
+				<div class="col-lg-9 article-col-9 ">
 					<% first_article = @articles_home.first %>
 					<% if first_article %>
 						<%= link_to article_path(first_article), target: "_self" do %>
@@ -49,19 +49,23 @@
 					<% end %>
 				</div>
 
-				<div class="col-lg-3">
+				<div class="col-lg-3 article-col-3">
 					<% third_articles = @articles_home.slice(3..6) %>
 					<% if third_articles %>
 						<% third_articles.each do |article| %>
+							<div class="article-parent">
 							<%= link_to article_path(article), target: "_self" do %>
 								<% if article.image %>
 									<%= image_tag article.image, title: article.title, class: "article-image-second" %>
 								<% else %>
 									<div class="text-center article-text-second"><span><%= article.title %></span></div>
 								<% end %>
+								</div>
 							<% end %>
 						<% end %>
+					
 					<% end %>
+
 				</div>
 			</div>
 		</div>
