--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,16 +8,16 @@
           <%= image_tag @user.avatar_url, size:"124", class:"steam-avatar"%>
         </div>
         <div class="col-sm-6">
-        <p class=" level">25</p>
+        <p class="level text-center"><%= @user.level %></p>
         </div>
         </div>
 
           <div class="col-sm-9">
             <div>
-          <span class="profile-nickname"><%= @user.nickname %></span>
-            <%= link_to "http://steamcommunity.com/profiles/#{@user.uid.to_i + 76561197960265728}" do %>
-            <i class="fa fa-steam-square fa-2x profile-icon" aria-hidden="true"></i>
-            <% end %>
+              <span class="profile-nickname"><%= @user.nickname %></span>
+               <%= link_to "http://steamcommunity.com/profiles/#{@user.uid.to_i + 76561197960265728}" do %>
+                <i class="fa fa-steam-square fa-2x profile-icon" aria-hidden="true"></i>
+              <% end %>
             </div>
             <br>
         <% if @private == true %>
@@ -70,8 +70,11 @@
           </div> -->
 
           <div class="progress skill-bar">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Test<i class="val">55%</i></span>
+            <% user_level = @user.level %>
+            <% level_min_points = @levels.find_by(level: user_level).min_points %>
+            <% level_max_points = @levels.find_by(level: user_level).max_points %>
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow=<%=@user.points%> aria-valuemin=<%=level_min_points%> aria-valuemax=<%=level_max_points%>>
+              <span class="skill">LEVEL<i class="val"><%= (@user.points - level_min_points) / (level_max_points - level_min_points) * 100 %></i></span>
             </div>
           </div>
         </div>
