add class name for progress bar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
           </div>
         </div>
         </div>
-    <div class="col-lg-6 pull-left skill-wrapper">
+    <div class="col-lg-6 pull-left">
       <div class="row" id="skill-bar">
         <!-- Skill Bars -->
         <div class="container-fluid">
